testsuite/tests/printer/Test20315.stderr
Test20315.hs:5:5: error: [GHC-83865]
    • Couldn't match type ‘Many’ with ‘m1 n1’
      Expected: a1 %(m1 n1) -> a1
        Actual: a1 -> a1
    • In the expression: id :: a %(m n :: Multiplicity) -> a
      In an equation for ‘f’: f = id :: a %(m n :: Multiplicity) -> a

