testsuite/tests/printer/Test20315.hs
{-# LANGUAGE LinearTypes #-}

import GHC.Types

f = id :: a %(m n :: Multiplicity) -> a
